--- a/src/Vista/EditarProductosPedido.form
+++ b/src/Vista/EditarProductosPedido.form
@@ -164,9 +164,10 @@
             <Component class="javax.swing.JTable" name="TablaProductosPedido">
               <Properties>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                  <Table columnCount="5" rowCount="0">
+                  <Table columnCount="6" rowCount="0">
+                    <Column editable="true" title="Id Pedido" type="java.lang.Object"/>
+                    <Column editable="true" title="Id Producto" type="java.lang.Object"/>
                     <Column editable="true" title="Nombre del Producto" type="java.lang.Object"/>
-                    <Column editable="true" title="C&#xf3;digo" type="java.lang.Object"/>
                     <Column editable="true" title="Cantidad" type="java.lang.Object"/>
                     <Column editable="true" title="Precio Unitario" type="java.lang.Object"/>
                     <Column editable="true" title="Sub Total" type="java.lang.Object"/>
